--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -144,7 +144,29 @@ jobs:
       - name: Set image tag output
         id: set_output
         run: echo "image_tag=$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_OUTPUT
+  
+  create-tag:
+    name: Create Git Tag for Rollback
+    runs-on: ubuntu-latest
+    needs: [docker]
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.TOKEN }}
 
+      - name: Set up Git config
+        run: |
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+
+      - name: Create and push tag
+        env:
+          TAG: "deploy-${{ github.run_number }}" 
+        run: |
+          git tag $TAG
+          git push origin $TAG
   update-k8s:
     name: Update Kubernetes Deployment
     runs-on: ubuntu-latest
@@ -181,4 +203,49 @@ jobs:
         run: |
           git add kubernetes/deployment.yaml
           git commit -m "Update Kubernetes deployment with new image tag: ${{ needs.docker.outputs.image_tag }} [skip ci]" || echo "No changes to commit"
+          git push
+    
+  rollback-update-k8s:
+    name: Rollback Kubernetes Deployment
+    runs-on: ubuntu-latest
+    needs: [docker]
+    if: faillure() && github.ref == 'refs/heads/main' && github.event_name == 'push'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.TOKEN }}
+      
+      - name: Setup Git config
+        run: |
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+
+      - name: Find previous deploy tag
+        id: prev_tag
+        run: |
+          TAGS=$(git tag --list "deploy-*" --sort=-creatordate)
+          PREV_TAG=$(echo "$TAGS" | sed -n 2p)
+          echo "PREV_TAG=$PREV_TAG" >> $GITHUB_ENV
+      
+      - name: Rollback Kubernetes deployment file
+        env:
+          IMAGE_TAG: sha-${{ github.sha }}
+          GITHUB_REPOSITORY: ${{ github.repository }}
+          REGISTRY: ghcr.io
+        run: |
+          # Define the new image with tag
+          NEW_IMAGE="${REGISTRY}/${GITHUB_REPOSITORY}:${PREV_TAG}"
+          
+          # Update the deployment file directly
+          sed -i "s|image: ${REGISTRY}/.*|image: ${NEW_IMAGE}|g" kubernetes/deployment.yaml
+          
+          # Verify the change
+          echo "Updated deployment to use image: ${NEW_IMAGE}"
+          grep -A 1 "image:" kubernetes/deployment.yaml
+      
+      - name: Commit and push changes
+        run: |
+          git add kubernetes/deployment.yaml
+          git commit -m "Update Kubernetes deployment with new image tag: ${{PREV_TAG}} [skip ci]" || echo "No changes to commit"
           git push
