--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -145,19 +145,19 @@ jobs:
         id: set_output
         run: echo "image_tag=$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_OUTPUT
   
-  create-tag:
-    name: Create Git Tag for Rollback
-    runs-on: ubuntu-latest
-    needs: [docker]
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.TOKEN }}
+create-tag:
+  name: Create Git Tag for Rollback
+  runs-on: ubuntu-latest
+  needs: [docker]
+  if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+  steps:
+    - name: Checkout code
+       uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.TOKEN }}
 
-      - name: Set up Git config
-        run: |
+    - name: Set up Git config
+       run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
 
@@ -170,7 +170,7 @@ jobs:
   update-k8s:
     name: Update Kubernetes Deployment
     runs-on: ubuntu-latest
-    needs: [docker]
+    needs: [docker, crate-tag]
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     steps:
       - name: Checkout code
