--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline de
+name: CI/CD Pipeline
 
 on:
   push:
@@ -8,7 +8,6 @@ on:
       - 'kubernetes/deployment.yaml'
   pull_request:
     branches: [ main ]
-
 
 jobs:
   test:
@@ -144,20 +143,20 @@ jobs:
       - name: Set image tag output
         id: set_output
         run: echo "image_tag=$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_OUTPUT
-  
-create-tag:
-  name: Create Git Tag for Rollback
-  runs-on: ubuntu-latest
-  needs: [docker]
-  if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-  steps:
-    - name: Checkout code
-       uses: actions/checkout@v4
-      with:
-        token: ${{ secrets.TOKEN }}
 
-    - name: Set up Git config
-       run: |
+  create-tag:
+    name: Create Git Tag for Rollback
+    runs-on: ubuntu-latest
+    needs: [docker]
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.TOKEN }}
+
+      - name: Set up Git config
+        run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
 
@@ -167,10 +166,11 @@ create-tag:
         run: |
           git tag $TAG
           git push origin $TAG
+
   update-k8s:
     name: Update Kubernetes Deployment
     runs-on: ubuntu-latest
-    needs: [docker, crate-tag]
+    needs: [docker, create-tag]
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     steps:
       - name: Checkout code
@@ -209,7 +209,7 @@ create-tag:
     name: Rollback Kubernetes Deployment
     runs-on: ubuntu-latest
     needs: [update-k8s]
-    if: faillure() && github.ref == 'refs/heads/main' && github.event_name == 'push'
+    if: ${{ failure() && github.ref == 'refs/heads/main' && github.event_name == 'push' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -230,22 +230,25 @@ create-tag:
       
       - name: Rollback Kubernetes deployment file
         env:
-          IMAGE_TAG: sha-${{ github.sha }}
-          GITHUB_REPOSITORY: ${{ github.repository }}
           REGISTRY: ghcr.io
+          GITHUB_REPOSITORY: ${{ github.repository }}
         run: |
-          # Define the new image with tag
-          NEW_IMAGE="${REGISTRY}/${GITHUB_REPOSITORY}:${PREV_TAG}"
-          
-          # Update the deployment file directly
-          sed -i "s|image: ${REGISTRY}/.*|image: ${NEW_IMAGE}|g" kubernetes/deployment.yaml
-          
-          # Verify the change
-          echo "Updated deployment to use image: ${NEW_IMAGE}"
+          if [ -z "$PREV_TAG" ]; then
+            # fallback on latest if no previous tag
+            ROLLBACK_IMAGE="${REGISTRY}/${GITHUB_REPOSITORY}:latest"
+            echo "No previous deploy tag found, using latest: ${ROLLBACK_IMAGE}"
+          else
+            PREV_SHA=$(git rev-list -n 1 "$PREV_TAG")
+            PREV_IMAGE_TAG="sha-${PREV_SHA:0:7}"
+            ROLLBACK_IMAGE="${REGISTRY}/${GITHUB_REPOSITORY}:${PREV_IMAGE_TAG}"
+            echo "Rollback to previous tag: $PREV_TAG, image: $ROLLBACK_IMAGE"
+          fi
+
+          sed -i "s|image: ${REGISTRY}/.*|image: ${ROLLBACK_IMAGE}|g" kubernetes/deployment.yaml
           grep -A 1 "image:" kubernetes/deployment.yaml
       
       - name: Commit and push changes
         run: |
           git add kubernetes/deployment.yaml
-          git commit -m "Update Kubernetes deployment with new image tag: ${{PREV_TAG}} [skip ci]" || echo "No changes to commit"
+          git commit -m "Rollback Kubernetes deployment to previous image [skip ci]" || echo "No changes to commit"
           git push
